[package]
name = "produ-render"
version = "0.1.0"
authors = ["Galileo <Galileo-dev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano", rev = "629fff8" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano", rev = "629fff8" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", rev = "629fff8" }
nalgebra-glm = "0.15.0"
winit = "0.25.0"
tobj = "3.2.0"
