[package]
name = "produ_engine"
version = "0.1.0"
authors = ["Galileo <Galileo-dev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
vulkano = "0.20"
vulkano-shaders = "0.20"
vulkano-win = "0.20"
winit = "0.24"